Fix folders badge center align due to .47px width Fix jumping by last message after sending

--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -130,6 +130,11 @@ Utility Classes
   font-weight: 500 !important;
 }
 
+// * fix text fractional width
+.text-super {
+  display: inline-table;
+}
+
 /* .flex-grow {
   flex-grow: 1;
 }
